# waymo-rosbag-record

catkin_ws/src/waymo_viewer/: CMakeLists.txt  nodelet_description.xml  package.xml
catkin_ws/src/waymo_viewer/launch/: pc1topc2.launch
catkin_ws/src/waymo_viewer/scripts/: recorder.py
catkin_ws/src/waymo_viewer/src/: pc1topc2.cpp
